charon/tests/ui/unsupported/projection-index-from-end.out
error: Unexpected ProjectionElem::ConstantIndex
 --> tests/ui/unsupported/projection-index-from-end.rs:4:14
  |
4 |         [.., _named] => (),
  |              ^^^^^^

error: aborting due to 1 previous error

Error: Charon driver exited with code 101
